Fix contact us icon z-index

--- a/src/spa/src/components/inner-header/inner-header.scss
+++ b/src/spa/src/components/inner-header/inner-header.scss
@@ -103,7 +103,7 @@ $toolbar-padding: 0 15px;
     bottom: 10px;
     background: #f55f44;
     color: $white-color;
-    z-index: 999;
+    z-index: 2;
     box-shadow: none;
   }
 }
